totalhits: prevent jumps on load

--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -310,12 +310,12 @@ body.login
 body.home
   .hero .totalHits
     display: inline-block
-    @media DESKTOP
-      min-width: 145px
-    @media TABLET
+    @media PHONE
       min-width: 150px
+    @media TABLET
+      min-width: 160px
     @media DESKTOP
-      min-width: 175px
+      min-width: 180px
 
 @import 'header'
 @import 'browseMenu'
